--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="demo_wrap">
         <h1><img src="images/logo-moe.png" alt=""></h1>
         <div class="btn_grp">
-            <a href="https://github.com/LiuCC910/Pccu_Apply" class="btn">切版檔案更新請按此下載</a>
+            <a href="https://github.com/echohsu0417/pccu-apply-main/" class="btn">切版檔案更新請按此下載</a>
         </div>
         <hr>
         <div class="table_wrapper">
